--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#78c165" />
+    <meta name="msapplication-TileColor" content="#b91d47" />
+    <meta name="theme-color" content="#ffffff" />
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <!-- HTML Meta Tags -->
+    <title>Zombites</title>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="The restaurant for all brain-loving zombies!"
     />
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Zombites" />
+    <meta
+      itemprop="description"
+      content="The restaurant for all brain-loving zombies!"
+    />
+    <meta itemprop="image" content="/logo512.png" />
+
+    <!-- Facebook Meta Tags -->
+    <!-- TODO <meta property="og:url" content="https://www.defectkw.com"> -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Zombites" />
+    <meta
+      property="og:description"
+      content="The restaurant for all brain-loving zombies!"
+    />
+    <meta property="og:image" content="/logo512.png" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Zombites" />
+    <meta
+      name="twitter:description"
+      content="The restaurant for all brain-loving zombies!"
+    />
+    <meta name="twitter:image" content="/logo512.png" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +62,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
