--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <meta itemprop="image" content="/logo512.png" />
 
     <!-- Facebook Meta Tags -->
-    <!-- TODO <meta property="og:url" content="https://www.defectkw.com"> -->
+    <meta property="og:url" content="https://zombites.netlify.app" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Zombites" />
     <meta
